<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.RegistrationActivity"
    tools:showIn="@layout/activity_registration"
    android:gravity="center_horizontal">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"

        android:layout_height="60dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:text="@string/welcome_message"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="234dp"
        android:layout_height="90dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="8dp"
        android:text="@string/new_way_of_payment"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="18sp" />

    <Button
        android:id="@+id/register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="#E8B406"
        android:text="@string/btn_register"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/bt_unregister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="#D5DBDB"
        android:text="@string/btn_unregister"
        android:textColor="@android:color/white" />

    <LinearLayout
        android:id="@+id/message_holder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    </LinearLayout>
    <TextView
        android:id="@+id/status_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="40dp"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="18sp"
        android:visibility="gone"/>

</LinearLayout>