<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:src="@drawable/logo" />

    <TextView
        android:id="@+id/tv_payment_heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logo"
        android:layout_gravity="center_horizontal"
        android:layout_margin="20dp"
        android:text="@string/make_payment_title"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="30sp" />


    <LinearLayout
        android:id="@+id/ll_transcation_details"
        android:layout_below="@+id/tv_payment_heading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:orientation="vertical"
        android:visibility="gone">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="10">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="4"
                android:layout_height="wrap_content"
                android:text="@string/merchant_id"
                android:textColor="#000000"
                android:textSize="15sp" />
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text=":"
                android:textColor="#000000"
                android:textSize="15sp" />
            <TextView
                android:id="@+id/tv_merchant_id"
                android:layout_width="0dp"
                android:layout_weight="5"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:textColor="#000000"
                android:textSize="15sp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="5dp"
            android:weightSum="10">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="4"
                android:layout_height="wrap_content"
                android:text="@string/merchant_name"
                android:textColor="#000000"
                android:textSize="15sp" />
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text=":"
                android:textColor="#000000"
                android:textSize="15sp" />
            <TextView
                android:id="@+id/tv_merchant_name"
                android:layout_width="0dp"
                android:layout_weight="5"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:gravity="right"
                android:textSize="15sp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="5dp"
            android:weightSum="10">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="4"
                android:layout_height="wrap_content"
                android:text="@string/total_transcation"
                android:textColor="#000000"
                android:textSize="15sp" />
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text=":"
                android:textColor="#000000"
                android:textSize="15sp" />
            <TextView
                android:id="@+id/total_amount"
                android:layout_width="0dp"
                android:layout_weight="5"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:gravity="right"
                android:textSize="15sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="20dp"
        android:weightSum="10">
        <Button
            android:id="@+id/bt_confirm"
            android:layout_width="0dp"
            android:layout_weight="5"
            android:layout_height="wrap_content"
            android:background="@drawable/button_style"
            android:text="@string/proceed"
            android:textColor="@android:color/white" />
        <Button
            android:id="@+id/bt_reject"
            android:layout_width="0dp"
            android:layout_weight="5"
            android:layout_height="wrap_content"
            android:background="@drawable/button_style"
            android:text="@string/reject"
            android:layout_marginLeft="5dp"
            android:textColor="@android:color/white" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/pbPayment"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"
        />


</RelativeLayout>